--- a/index.sass
+++ b/index.sass
@@ -1,2 +1,6 @@
 @import './node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss'
 @icon-font-path '../node_modules/bootstrap-sass/assets/fonts/'
+
+// customizations
+@font-size-base: 16px
+@line-height-base: 1.7
