--- a/index.sass
+++ b/index.sass
@@ -1,6 +1,7 @@
+$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/'
 @import './node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss'
-@icon-font-path '../node_modules/bootstrap-sass/assets/fonts/'
+
 
 // customizations
-@font-size-base: 16px
-@line-height-base: 1.7
+$font-size-base: 16px
+$line-height-base: 1.7
